--- a/direct_round1.html
+++ b/direct_round1.html
@@ -35,8 +35,7 @@
       color: #444;
     }
     input[type="number"],
-    input[type="text"],
-    textarea {
+    input[type="text"] {
       width: 100%;
       padding: 8px 12px;
       font-size: 16px;
@@ -44,12 +43,6 @@
       border-radius: 6px;
       box-sizing: border-box;
       font-family: inherit;
-      resize: vertical;
-    }
-    textarea {
-      min-height: 210px;
-      background-color: #f3e8ff;
-      color: #5f0080;
     }
     .result-box {
       margin-top: 20px;
@@ -62,6 +55,15 @@
       user-select: text;
       white-space: pre-wrap;
       min-height: 48px;
+    }
+    .mentions-preview {
+      background: #f4f4f4;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      white-space: pre-wrap;
+      margin-top: 10px;
+      font-family: monospace;
     }
     button.copy-btn {
       margin-top: 10px;
@@ -83,11 +85,13 @@
       font-weight: 600;
       display: none;
     }
-    .input-group label input[type="checkbox"] {
-      margin-right: 8px;
+    .checkbox-list label {
+      font-weight: normal;
+      margin-bottom: 4px;
+      display: block;
     }
-    .input-group div {
-      padding-left: 10px;
+    .checkbox-list input[type="checkbox"] {
+      margin-right: 8px;
     }
   </style>
 </head>
@@ -108,39 +112,37 @@
   </div>
 
   <div class="notice">완성된 안내 문장:</div>
-  <div id="resultText" class="result-box">
-    6층 SIOC 직배 1회차 ○○P 상차후 ○○:○○ 1층으로 내려갑니다.
+  <div id="resultText" class="result-box"></div>
+
+  <div class="input-group">
+    <label>멘션 수정 가능 영역 (체크된 멘션만 포함)</label>
+    <div id="mentionContainer" class="checkbox-list">
+      <label><input type="checkbox" checked> @손종선[평택HUB]</label>
+      <label><input type="checkbox" checked> @신직호[평택HUB_분류]</label>
+      <label><input type="checkbox" checked> @조규준[평택HUB_분류]</label>
+      <label><input type="checkbox" checked> @김남일[평택 HUB _ SIOC]</label>
+      <label><input type="checkbox" checked> @권미선[평택HUB_SIOC]</label>
+      <label><input type="checkbox" checked> @정주석[평택HUB_분류]</label>
+      <label><input type="checkbox" checked> @표상일 [평택HUB_분류]</label>
+      <label><input type="checkbox" checked> @배도현 [평택HUB_출하]</label>
+      <label><input type="checkbox" checked> @김종학[평택HUB_출하]</label>
+    </div>
+  </div>
+
+  <div class="input-group">
+    <label>✔ 멘션 미리보기</label>
+    <div id="mentionPreview" class="mentions-preview"></div>
   </div>
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div id="copySuccess" class="copy-success">복사되었습니다!</div>
 
-  <div class="input-group" style="margin-top:30px;">
-    <label for="mentionsTextarea">멘션 수정 가능 영역</label>
-    <textarea id="mentionsTextarea" spellcheck="false">@손종선[평택HUB]
-@신직호[평택HUB_분류]
-@조규준[평택HUB_분류]
-@김남일[평택 HUB _ SIOC]
-@권미선[평택HUB_SIOC]
-@정주석[평택HUB_분류]
-@표상일 [평택HUB_분류]
-@배도현 [평택HUB_출하]
-@김종학[평택HUB_출하]</textarea>
-  </div>
-
-  <div class="input-group">
-    <label><strong>📷 필요 사진 체크리스트</strong></label>
-    <div>
-      <label><input type="checkbox" /> 트럭사진</label><br />
-      <label><input type="checkbox" /> 내선 PLT</label>
-    </div>
-  </div>
-
   <script>
     const pInput = document.getElementById('pInput');
     const timeInput = document.getElementById('timeInput');
     const resultText = document.getElementById('resultText');
-    const mentionsTextarea = document.getElementById('mentionsTextarea');
+    const mentionContainer = document.getElementById('mentionContainer');
+    const mentionPreview = document.getElementById('mentionPreview');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
 
@@ -152,26 +154,33 @@
       const pVal = pInput.value ? padNumber(pInput.value) + 'P' : '○○P';
       const timeVal = timeInput.value.trim() || '○○:○○';
       resultText.textContent = `6층 SIOC 직배 1회차 ${pVal} 상차후 ${timeVal} 1층으로 내려갑니다.`;
+
+      const checkedMentions = Array.from(mentionContainer.querySelectorAll('input[type="checkbox"]:checked'))
+        .map(input => input.parentElement.textContent.trim())
+        .join('\n');
+
+      mentionPreview.textContent = checkedMentions || '(선택된 멘션이 없습니다)';
       copySuccess.style.display = 'none';
     }
 
-    copyBtn.addEventListener('click', () => {
-      const textToCopy = resultText.textContent + '\n\n\n' + mentionsTextarea.value;
-      if (navigator.clipboard) {
-        navigator.clipboard.writeText(textToCopy).then(() => {
-          copySuccess.style.display = 'block';
-          setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
-        }).catch(() => {
-          alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
-        });
-      } else {
-        alert('이 브라우저는 복사 기능을 지원하지 않습니다.');
-      }
-    });
+    function copyText() {
+      const textToCopy = resultText.textContent + '\n\n\n' + mentionPreview.textContent;
+      navigator.clipboard.writeText(textToCopy).then(() => {
+        copySuccess.style.display = 'block';
+        setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
+      }).catch(() => {
+        alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
+      });
+    }
 
     pInput.addEventListener('input', updateResult);
     timeInput.addEventListener('input', updateResult);
-    updateResult();
+    mentionContainer.querySelectorAll('input[type="checkbox"]').forEach(cb => {
+      cb.addEventListener('change', updateResult);
+    });
+    copyBtn.addEventListener('click', copyText);
+
+    updateResult(); // 초기 상태 표시
   </script>
 </body>
 </html>
