--- a/cg_work1.html
+++ b/cg_work1.html
@@ -46,11 +46,6 @@
       font-family: inherit;
       resize: vertical;
     }
-    textarea {
-      min-height: 210px;
-      background-color: #f3e8ff;
-      color: #5f0080;
-    }
     .result-box {
       margin-top: 20px;
       padding: 15px;
@@ -83,7 +78,10 @@
       font-weight: 600;
       display: none;
     }
-    /* 체크리스트 스타일 추가 */
+    .mention-list label {
+      display: block;
+      margin-bottom: 4px;
+    }
     .checklist-section {
       margin-top: 30px;
       font-size: 18px;
@@ -117,28 +115,16 @@
   </div>
 
   <div class="notice">완성된 안내 문장:</div>
-  <div id="resultText" class="result-box">
-    6층 SIOC 충청, 광주 1회차 ○○P 상차후 ○○:○○ 1층으로 내려갑니다.
-  </div>
+  <div id="resultText" class="result-box"></div>
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div id="copySuccess" class="copy-success">복사되었습니다!</div>
 
-  <!-- 멘션 수정 가능 영역을 체크리스트 위로 이동 -->
   <div class="input-group" style="margin-top:30px;">
-    <label for="mentionsTextarea">멘션 수정 가능 영역</label>
-    <textarea id="mentionsTextarea" spellcheck="false">@손종선[평택HUB]
-@신직호[평택HUB_분류]
-@조규준[평택HUB_분류]
-@김남일[평택 HUB _ SIOC]
-@권미선[평택HUB_SIOC]
-@정주석[평택HUB_분류]
-@표상일 [평택HUB_분류]
-@배도현 [평택HUB_출하]
-@김종학[평택HUB_출하]</textarea>
+    <label>멘션 수정 가능 영역 (체크 해제 시 복사에서 제외됩니다)</label>
+    <div class="mention-list" id="mentionList"></div>
   </div>
 
-  <!-- 체크리스트 섹션 추가 -->
   <div class="checklist-section">
     <h3>필요 사진 체크리스트</h3>
     <label><input type="checkbox" /> 1. 트럭사진</label>
@@ -146,26 +132,60 @@
   </div>
 
   <script>
+    const mentions = [
+      '@손종선[평택HUB]',
+      '@신직호[평택HUB_분류]',
+      '@조규준[평택HUB_분류]',
+      '@김남일[평택 HUB _ SIOC]',
+      '@권미선[평택HUB_SIOC]',
+      '@정주석[평택HUB_분류]',
+      '@표상일 [평택HUB_분류]',
+      '@배도현 [평택HUB_출하]',
+      '@김종학[평택HUB_출하]'
+    ];
+
     const pInput = document.getElementById('pInput');
     const timeInput = document.getElementById('timeInput');
     const resultText = document.getElementById('resultText');
-    const mentionsTextarea = document.getElementById('mentionsTextarea');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
+    const mentionList = document.getElementById('mentionList');
 
     function padNumber(num, length = 2) {
       return num.toString().padStart(length, '0');
     }
 
+    function getSelectedMentions() {
+      return Array.from(document.querySelectorAll('.mention-list input:checked'))
+        .map(input => input.value)
+        .join('\n');
+    }
+
     function updateResult() {
       const pVal = pInput.value ? padNumber(pInput.value) + 'P' : '○○P';
       const timeVal = timeInput.value.trim() || '○○:○○';
-      resultText.textContent = `6층 SIOC 충청, 광주 1회차 ${pVal} 상차후 ${timeVal} 1층으로 내려갑니다.`;
+      const mentionText = getSelectedMentions();
+      resultText.textContent = `6층 SIOC 충청, 광주 1회차 ${pVal} 상차후 ${timeVal} 1층으로 내려갑니다.\n\n\n${mentionText}`;
       copySuccess.style.display = 'none';
     }
 
+    mentions.forEach(m => {
+      const label = document.createElement('label');
+      const checkbox = document.createElement('input');
+      checkbox.type = 'checkbox';
+      checkbox.checked = true;
+      checkbox.value = m;
+      checkbox.addEventListener('change', updateResult);
+      label.appendChild(checkbox);
+      label.appendChild(document.createTextNode(' ' + m));
+      mentionList.appendChild(label);
+    });
+
+    pInput.addEventListener('input', updateResult);
+    timeInput.addEventListener('input', updateResult);
+
     copyBtn.addEventListener('click', () => {
-      const textToCopy = resultText.textContent + '\n\n\n' + mentionsTextarea.value;
+      const textToCopy = resultText.textContent;
       if (navigator.clipboard) {
         navigator.clipboard.writeText(textToCopy).then(() => {
           copySuccess.style.display = 'block';
@@ -178,8 +198,6 @@
       }
     });
 
-    pInput.addEventListener('input', updateResult);
-    timeInput.addEventListener('input', updateResult);
     updateResult();
   </script>
 </body>
