--- a/round3_cgj.html
+++ b/round3_cgj.html
@@ -35,8 +35,7 @@
       color: #444;
     }
     input[type="number"],
-    input[type="text"],
-    textarea {
+    input[type="text"] {
       width: 100%;
       padding: 8px 12px;
       font-size: 16px;
@@ -45,11 +44,6 @@
       box-sizing: border-box;
       font-family: inherit;
       resize: vertical;
-    }
-    textarea {
-      min-height: 210px;
-      background-color: #f3e8ff;
-      color: #5f0080;
     }
     .result-box {
       margin-top: 20px;
@@ -83,41 +77,30 @@
       font-weight: 600;
       display: none;
     }
-    .checklist-section {
-      margin-top: 30px;
-      font-size: 18px;
-      color: #5f0080;
-    }
-    .checklist-section h3 {
-      margin-bottom: 10px;
-    }
-    .checklist-section label {
-      font-weight: 500;
-      margin-bottom: 6px;
-      display: block;
-      cursor: pointer;
-    }
-    .mention-area {
+    .mention-list {
       margin-top: 20px;
-    }
-    .mention-area label {
-      font-weight: 600;
-      color: #5f0080;
-      margin-bottom: 6px;
-      display: block;
-    }
-    .mention-area textarea {
-      background-color: #f3e8ff;
-      color: #5f0080;
-      min-height: 150px;
-      border-radius: 6px;
       border: 1px solid #5f0080;
-      resize: vertical;
+      border-radius: 8px;
+      padding: 12px;
+      background-color: #f3e8ff;
+      max-height: 260px;
+      overflow-y: auto;
       font-family: inherit;
-      padding: 8px 12px;
-      font-size: 16px;
-      width: 100%;
-      box-sizing: border-box;
+      color: #5f0080;
+    }
+    .mention-list label {
+      display: flex;
+      align-items: center;
+      margin-bottom: 8px;
+      cursor: pointer;
+      user-select: none;
+      font-weight: 600;
+    }
+    .mention-list input[type="checkbox"] {
+      margin-right: 10px;
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -142,35 +125,28 @@
     6층 SIOC 충청, 광주, 제주 3회차 ○○P 상차후 ○○:○○ 1층으로 내려갑니다.
   </div>
 
-  <div class="mention-area">
-    <label for="mentionsTextarea">멘션 수정 가능 영역</label>
-    <textarea id="mentionsTextarea" spellcheck="false">@손종선[평택HUB]
-@신직호[평택HUB_분류]
-@조규준[평택HUB_분류]
-@김남일[평택 HUB _ SIOC]
-@권미선[평택HUB_SIOC]
-@정주석[평택HUB_분류]
-@표상일 [평택HUB_분류]
-@배도현 [평택HUB_출하]
-@김종학[평택HUB_출하]</textarea>
-  </div>
-
-  <div class="checklist-section">
-    <h3>필요 사진 체크리스트</h3>
-    <label><input type="checkbox" /> 1. 트럭사진</label>
-    <label><input type="checkbox" /> 2. 내선 PLT 체크리스트</label>
-  </div>
-
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div id="copySuccess" class="copy-success">복사되었습니다!</div>
+
+  <div class="mention-list" id="mentionList">
+    <label><input type="checkbox" checked />@손종선[평택HUB]</label>
+    <label><input type="checkbox" checked />@신직호[평택HUB_분류]</label>
+    <label><input type="checkbox" checked />@조규준[평택HUB_분류]</label>
+    <label><input type="checkbox" checked />@김남일[평택 HUB _ SIOC]</label>
+    <label><input type="checkbox" checked />@권미선[평택HUB_SIOC]</label>
+    <label><input type="checkbox" checked />@정주석[평택HUB_분류]</label>
+    <label><input type="checkbox" checked />@표상일 [평택HUB_분류]</label>
+    <label><input type="checkbox" checked />@배도현 [평택HUB_출하]</label>
+    <label><input type="checkbox" checked />@김종학[평택HUB_출하]</label>
+  </div>
 
   <script>
     const pInput = document.getElementById('pInput');
     const timeInput = document.getElementById('timeInput');
     const resultText = document.getElementById('resultText');
-    const mentionsTextarea = document.getElementById('mentionsTextarea');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
+    const mentionList = document.getElementById('mentionList');
 
     function padNumber(num, length = 2) {
       return num.toString().padStart(length, '0');
@@ -183,8 +159,22 @@
       copySuccess.style.display = 'none';
     }
 
+    function getSelectedMentions() {
+      const labels = mentionList.querySelectorAll('label');
+      let mentions = [];
+      labels.forEach(label => {
+        const checkbox = label.querySelector('input[type="checkbox"]');
+        if (checkbox.checked) {
+          // 텍스트에서 체크박스 제외한 멘션 텍스트만 추출
+          const mentionText = label.textContent.trim();
+          mentions.push(mentionText);
+        }
+      });
+      return mentions.join('\n');
+    }
+
     copyBtn.addEventListener('click', () => {
-      const textToCopy = resultText.textContent + '\n\n\n' + mentionsTextarea.value;
+      const textToCopy = resultText.textContent + '\n\n\n' + getSelectedMentions();
       if (navigator.clipboard) {
         navigator.clipboard.writeText(textToCopy).then(() => {
           copySuccess.style.display = 'block';
@@ -199,6 +189,10 @@
 
     pInput.addEventListener('input', updateResult);
     timeInput.addEventListener('input', updateResult);
+    mentionList.addEventListener('change', () => {
+      copySuccess.style.display = 'none';
+    });
+
     updateResult();
   </script>
 </body>
