--- a/obungi_report.html
+++ b/obungi_report.html
@@ -94,6 +94,32 @@
       flex: 1;
       text-align: center;
     }
+    .mention-list {
+      margin-top: 15px;
+      border: 1px solid #5f0080;
+      border-radius: 8px;
+      padding: 12px;
+      max-height: 150px;
+      overflow-y: auto;
+      background-color: #faf5ff;
+      font-size: 16px;
+      color: #5f0080;
+    }
+    .mention-list label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 6px;
+      cursor: pointer;
+      user-select: none;
+    }
+    .copy-success {
+      color: green;
+      margin-top: 8px;
+      font-weight: 600;
+      display: none;
+      user-select: none;
+    }
   </style>
 </head>
 <body>
@@ -119,13 +145,22 @@
     <label for="time">발생시각</label>
     <input type="text" id="time" placeholder="예: 16:19" />
 
-    <label for="mentions">맨션 수정 (수정 가능)</label>
-    <textarea id="mentions" rows="4">@손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC]
-@권미선[평택HUB_SIOC] @홍지호 [FC자동화설비]</textarea>
+    <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
+    <div class="mention-list" id="mentionList">
+      <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked />@손종선[평택HUB]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked />@신직호[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@조규준[평택HUB_분류]" checked />@조규준[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked />@김남일[평택 HUB _ SIOC]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked />@권미선[평택HUB_SIOC]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@정주석[평택HUB_분류]" checked />@정주석[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@배도현 [평택HUB_출하]" checked />@배도현 [평택HUB_출하]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked />@김종학[평택HUB_출하]</label>
+    </div>
 
     <button onclick="copyToClipboard()">복사하기</button>
+    <div class="copy-success" id="copySuccess">복사되었습니다!</div>
 
-    <div class="output" id="outputBox"></div>
+    <div class="output" id="outputBox" aria-live="polite" aria-atomic="true"></div>
 
     <div class="suit-reference" aria-label="슈트 번호 참조">
       슈트 번호 참조: 1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
@@ -135,6 +170,7 @@
   <script>
     const countInput = document.getElementById('count');
     const orderInputsContainer = document.getElementById('orderInputsContainer');
+    const copySuccess = document.getElementById('copySuccess');
 
     function createOrderInputs(n) {
       orderInputsContainer.innerHTML = '';
@@ -175,7 +211,11 @@
       const errorNo = document.getElementById('errorNo').value.trim();
       const errorZone = document.getElementById('errorZone').value.trim();
       const time = document.getElementById('time').value.trim();
-      const mentions = document.getElementById('mentions').value.trim();
+
+      // 체크된 멘션만 가져오기
+      const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
+      const mentionsText = checkedMentions.join(' ');
+
       const count = orderPairs.length || 1;
 
       const text = `단독 오분기건 ${count}건 발생하였습니다.
@@ -183,7 +223,7 @@
 오분기 슈트 : ${errorNo ? errorNo + '번' : ''} ${errorZone ? errorZone + ' 권역' : ''}
 발생시각 : ${time ? time + ' 분경' : ''}
 
-${mentions}`;
+${mentionsText}`;
 
       document.getElementById('outputBox').textContent = text;
     }
@@ -194,7 +234,8 @@ ${mentions}`;
       if (!text.trim()) return alert("복사할 내용이 없습니다.");
 
       navigator.clipboard.writeText(text).then(() => {
-        alert("복사 완료!");
+        copySuccess.style.display = 'block';
+        setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
       }).catch(() => {
         alert("복사 실패! 수동으로 복사해 주세요.");
       });
@@ -207,12 +248,20 @@ ${mentions}`;
       generateText();
     });
 
-    ['errorNo','errorZone','time','mentions'].forEach(id => {
+    ['errorNo','errorZone','time'].forEach(id => {
       document.getElementById(id).addEventListener('input', generateText);
     });
 
     orderInputsContainer.addEventListener('input', e => {
       if(e.target.classList.contains('orderNo') || e.target.classList.contains('orderZone')){
+        generateText();
+      }
+    });
+
+    // 멘션 체크박스 변경 시 복사성공 메시지 숨기기 및 텍스트 갱신
+    document.getElementById('mentionList').addEventListener('change', e => {
+      if (e.target.classList.contains('mentionCheckbox')) {
+        copySuccess.style.display = 'none';
         generateText();
       }
     });
