--- a/jeongsang_report.html
+++ b/jeongsang_report.html
@@ -76,6 +76,30 @@
       display: none;
       text-align: center;
     }
+    .mention-list {
+      margin-top: 10px;
+      border: 1px solid #5f0080;
+      border-radius: 8px;
+      padding: 10px 12px;
+      max-height: 140px;
+      overflow-y: auto;
+      background-color: #faf5ff;
+      font-size: 16px;
+      color: #5f0080;
+    }
+    .mention-list label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 6px;
+      cursor: pointer;
+      user-select: none;
+    }
+    .mention-list input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -95,11 +119,16 @@
   <label for="timeInput">발생 시각</label>
   <input type="text" id="timeInput" placeholder="예: 23:10" />
 
-  <label for="mentionTextarea">멘션 (수정 가능)</label>
-  <textarea id="mentionTextarea" spellcheck="false">@손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
-@홍지호 [FC자동화설비]</textarea>
+  <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
+  <div class="mention-list" id="mentionList">
+    <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked />@손종선[평택HUB]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked />@신직호[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked />@김남일[평택 HUB _ SIOC]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked />@권미선[평택HUB_SIOC]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@홍지호 [FC자동화설비]" checked />@홍지호 [FC자동화설비]</label>
+  </div>
 
-  <div class="result-box" id="resultBox">
+  <div class="result-box" id="resultBox" aria-live="polite" aria-atomic="true">
     정상분기건 ○건 발생하였습니다.
     지시 슈트 : ○번 ○권역 N건
     오분기 슈트 : ○○
@@ -117,14 +146,14 @@
   const sheetInputsContainer = document.getElementById('sheetInputsContainer');
   const rejectedSuitInput = document.getElementById('rejectedSuitInput');
   const timeInput = document.getElementById('timeInput');
-  const mentionTextarea = document.getElementById('mentionTextarea');
+  const mentionList = document.getElementById('mentionList');
   const resultBox = document.getElementById('resultBox');
   const copyBtn = document.getElementById('copyBtn');
   const copySuccess = document.getElementById('copySuccess');
 
   // 동적으로 지시 슈트 입력란 생성 함수
   function createSheetInputs(num) {
-    // 현재 있는 input들 제거
+    // 기존 input들 제거
     while (sheetInputsContainer.firstChild) {
       sheetInputsContainer.removeChild(sheetInputsContainer.firstChild);
     }
@@ -153,18 +182,20 @@
     const rejectedVal = rejectedSuitInput.value.trim() || '○○';
     const timeVal = timeInput.value.trim() || '○○:○○';
 
+    // 체크된 멘션만 가져오기
+    const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
+    const mentionsText = checkedMentions.join(' ');
+
     resultBox.textContent = `정상분기건 ${countVal}건 발생하였습니다.
 지시 슈트 : ${sheetsStr}
 오분기 슈트 : ${rejectedVal}
 발생시각 : ${timeVal} 분경
 
-${mentionTextarea.value}`;
+${mentionsText}`;
     copySuccess.style.display = 'none';
   }
 
-  // 최초 1개 input 생성
-  createSheetInputs(parseInt(countInput.value) || 1);
-
+  // 이벤트 리스너 등록
   countInput.addEventListener('input', () => {
     let val = parseInt(countInput.value);
     if (isNaN(val) || val < 1) val = 1;
@@ -176,7 +207,13 @@ ${mentionTextarea.value}`;
 
   rejectedSuitInput.addEventListener('input', updateResult);
   timeInput.addEventListener('input', updateResult);
-  mentionTextarea.addEventListener('input', updateResult);
+
+  mentionList.addEventListener('change', e => {
+    if (e.target.classList.contains('mentionCheckbox')) {
+      copySuccess.style.display = 'none';
+      updateResult();
+    }
+  });
 
   copyBtn.addEventListener('click', () => {
     if (navigator.clipboard) {
@@ -191,6 +228,8 @@ ${mentionTextarea.value}`;
     }
   });
 
+  // 초기 입력란 생성 및 결과 업데이트
+  createSheetInputs(parseInt(countInput.value) || 1);
   updateResult();
 </script>
 </body>
