--- a/hub_close_select.html
+++ b/hub_close_select.html
@@ -20,7 +20,7 @@
       margin-bottom: 6px;
       color: #333;
     }
-    input[type="text"], input[type="number"], textarea {
+    input[type="text"], input[type="number"] {
       width: 100%;
       max-width: 400px;
       padding: 8px 10px;
@@ -29,7 +29,6 @@
       border-radius: 6px;
       box-sizing: border-box;
       font-family: inherit;
-      resize: vertical;
     }
     .result-box {
       margin-top: 20px;
@@ -61,6 +60,7 @@
     .checkbox-group input[type="checkbox"] {
       width: 22px;
       height: 22px;
+      cursor: pointer;
     }
     button.copy-btn {
       margin-top: 10px;
@@ -85,35 +85,13 @@
     .hidden {
       display: none;
     }
-    /* 멘션 체크박스 그룹 스타일 */
-    #mentionsCheckboxes {
-      margin-top: 15px;
-      border: 1px solid #5f0080;
-      padding: 12px;
-      border-radius: 8px;
-      background-color: #f3e8ff;
-      max-width: 420px;
-      user-select: none;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      font-size: 16px;
-    }
-    #mentionsCheckboxes label {
-      font-weight: normal;
-      color: #5f0080;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
   </style>
 </head>
 <body>
   <h2>6층 SIOC 마감 문구 작성</h2>
 
   <label>구분 선택</label>
-  <div class="checkbox-group">
+  <div class="checkbox-group" id="typeCheckboxGroup">
     <label><input type="checkbox" name="type" value="직배" /> 직배</label>
     <label><input type="checkbox" name="type" value="충청" /> 충청</label>
     <label><input type="checkbox" name="type" value="광주" /> 광주</label>
@@ -130,19 +108,19 @@
   <label for="timeInput">시간 입력 (예: 24:09, 08:40)</label>
   <input type="text" id="timeInput" placeholder="예: 24:09" />
 
-  <div class="result-box" id="resultText">6층 SIOC ○○ ○회차 ○○:○○ 마감입니다</div>
-
   <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
-  <div id="mentionsCheckboxes">
-    <label><input type="checkbox" class="mention-checkbox" checked /> @손종선[평택HUB]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @신직호[평택HUB_분류]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @조규준[평택HUB_분류]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @김남일[평택 HUB _ SIOC]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @권미선[평택HUB_SIOC]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @정주석[평택HUB_분류]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @배도현 [평택HUB_출하]</label>
-    <label><input type="checkbox" class="mention-checkbox" checked /> @김종학[평택HUB_출하]</label>
+  <div class="checkbox-group" id="mentionCheckboxGroup">
+    <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked /> @손종선[평택HUB]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked /> @신직호[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@조규준[평택HUB_분류]" checked /> @조규준[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked /> @김남일[평택 HUB _ SIOC]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked /> @권미선[평택HUB_SIOC]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@정주석[평택HUB_분류]" checked /> @정주석[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@배도현 [평택HUB_출하]" checked /> @배도현 [평택HUB_출하]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked /> @김종학[평택HUB_출하]</label>
   </div>
+
+  <div class="result-box" id="resultText">6층 SIOC ○○ ○회차 ○○:○○ 마감입니다</div>
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div class="copy-success" id="copySuccess">복사되었습니다!</div>
@@ -152,10 +130,10 @@
     const batchInput = document.getElementById('batchInput');
     const timeInput = document.getElementById('timeInput');
     const resultText = document.getElementById('resultText');
-    const mentionsCheckboxes = document.querySelectorAll('.mention-checkbox');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
     const batchGroup = document.getElementById('batchGroup');
+    const mentionCheckboxes = document.querySelectorAll('.mentionCheckbox');
 
     function getSelectedTypes() {
       const selected = [];
@@ -183,17 +161,15 @@
       copySuccess.style.display = 'none';
     }
 
-    function getSelectedMentions() {
-      const selectedMentions = [];
-      mentionsCheckboxes.forEach(cb => {
-        if (cb.checked) selectedMentions.push(cb.parentElement.textContent.trim());
-      });
-      return selectedMentions.join(' ');
-    }
-
+    // 복사할 텍스트에 체크된 멘션만 붙이기
     copyBtn.addEventListener('click', () => {
-      const mentionsText = getSelectedMentions();
-      const textToCopy = resultText.textContent + '\n\n' + mentionsText;
+      const selectedMentions = Array.from(mentionCheckboxes)
+        .filter(cb => cb.checked)
+        .map(cb => cb.value)
+        .join(' ');
+
+      const textToCopy = resultText.textContent + '\n\n' + selectedMentions;
+
       if (navigator.clipboard) {
         navigator.clipboard.writeText(textToCopy).then(() => {
           copySuccess.style.display = 'block';
@@ -206,17 +182,19 @@
       }
     });
 
-    checkboxes.forEach(cb => cb.addEventListener('change', updateResult));
-    batchInput.addEventListener('input', updateResult);
-    timeInput.addEventListener('input', updateResult);
-
-    mentionsCheckboxes.forEach(cb => {
+    // 체크박스 변화 시 복사 성공 메시지 숨기고 결과 갱신
+    [...checkboxes, ...mentionCheckboxes].forEach(cb => {
       cb.addEventListener('change', () => {
         copySuccess.style.display = 'none';
+        updateResult();
       });
     });
+
+    batchInput.addEventListener('input', updateResult);
+    timeInput.addEventListener('input', updateResult);
 
     updateResult();
   </script>
 </body>
 </html>
+
