--- a/round3_cgj.html
+++ b/round3_cgj.html
@@ -35,7 +35,8 @@
       color: #444;
     }
     input[type="number"],
-    input[type="text"] {
+    input[type="text"],
+    textarea {
       width: 100%;
       padding: 8px 12px;
       font-size: 16px;
@@ -44,6 +45,11 @@
       box-sizing: border-box;
       font-family: inherit;
       resize: vertical;
+    }
+    textarea {
+      min-height: 210px;
+      background-color: #f3e8ff;
+      color: #5f0080;
     }
     .result-box {
       margin-top: 20px;
@@ -77,30 +83,18 @@
       font-weight: 600;
       display: none;
     }
-    .mention-list {
-      margin-top: 20px;
+    /* 멘션 미리보기 박스 스타일 */
+    #mentionsPreview {
+      margin-top: 10px;
+      padding: 12px;
       border: 1px solid #5f0080;
       border-radius: 8px;
-      padding: 12px;
       background-color: #f3e8ff;
-      max-height: 260px;
-      overflow-y: auto;
-      font-family: inherit;
       color: #5f0080;
-    }
-    .mention-list label {
-      display: flex;
-      align-items: center;
-      margin-bottom: 8px;
-      cursor: pointer;
-      user-select: none;
-      font-weight: 600;
-    }
-    .mention-list input[type="checkbox"] {
-      margin-right: 10px;
-      width: 18px;
-      height: 18px;
-      cursor: pointer;
+      font-size: 16px;
+      white-space: pre-wrap;
+      min-height: 100px;
+      user-select: text;
     }
   </style>
 </head>
@@ -125,28 +119,38 @@
     6층 SIOC 충청, 광주, 제주 3회차 ○○P 상차후 ○○:○○ 1층으로 내려갑니다.
   </div>
 
+  <div class="mention-area">
+    <label for="mentionsTextarea">멘션 수정 가능 영역</label>
+    <textarea id="mentionsTextarea" spellcheck="false">@손종선[평택HUB]
+@신직호[평택HUB_분류]
+@조규준[평택HUB_분류]
+@김남일[평택 HUB _ SIOC]
+@권미선[평택HUB_SIOC]
+@정주석[평택HUB_분류]
+@표상일 [평택HUB_분류]
+@배도현 [평택HUB_출하]
+@김종학[평택HUB_출하]</textarea>
+  </div>
+
+  <div id="mentionsPreview"></div>
+
+  <div class="checklist-section">
+    <h3>필요 사진 체크리스트</h3>
+    <label><input type="checkbox" /> 1. 트럭사진</label>
+    <label><input type="checkbox" /> 2. 내선 PLT 체크리스트</label>
+  </div>
+
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div id="copySuccess" class="copy-success">복사되었습니다!</div>
-
-  <div class="mention-list" id="mentionList">
-    <label><input type="checkbox" checked />@손종선[평택HUB]</label>
-    <label><input type="checkbox" checked />@신직호[평택HUB_분류]</label>
-    <label><input type="checkbox" checked />@조규준[평택HUB_분류]</label>
-    <label><input type="checkbox" checked />@김남일[평택 HUB _ SIOC]</label>
-    <label><input type="checkbox" checked />@권미선[평택HUB_SIOC]</label>
-    <label><input type="checkbox" checked />@정주석[평택HUB_분류]</label>
-    <label><input type="checkbox" checked />@표상일 [평택HUB_분류]</label>
-    <label><input type="checkbox" checked />@배도현 [평택HUB_출하]</label>
-    <label><input type="checkbox" checked />@김종학[평택HUB_출하]</label>
-  </div>
 
   <script>
     const pInput = document.getElementById('pInput');
     const timeInput = document.getElementById('timeInput');
     const resultText = document.getElementById('resultText');
+    const mentionsTextarea = document.getElementById('mentionsTextarea');
+    const mentionsPreview = document.getElementById('mentionsPreview');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
-    const mentionList = document.getElementById('mentionList');
 
     function padNumber(num, length = 2) {
       return num.toString().padStart(length, '0');
@@ -156,25 +160,12 @@
       const pVal = pInput.value ? padNumber(pInput.value) + 'P' : '○○P';
       const timeVal = timeInput.value.trim() || '○○:○○';
       resultText.textContent = `6층 SIOC 충청, 광주, 제주 3회차 ${pVal} 상차후 ${timeVal} 1층으로 내려갑니다.`;
+      mentionsPreview.textContent = mentionsTextarea.value;
       copySuccess.style.display = 'none';
     }
 
-    function getSelectedMentions() {
-      const labels = mentionList.querySelectorAll('label');
-      let mentions = [];
-      labels.forEach(label => {
-        const checkbox = label.querySelector('input[type="checkbox"]');
-        if (checkbox.checked) {
-          // 텍스트에서 체크박스 제외한 멘션 텍스트만 추출
-          const mentionText = label.textContent.trim();
-          mentions.push(mentionText);
-        }
-      });
-      return mentions.join('\n');
-    }
-
     copyBtn.addEventListener('click', () => {
-      const textToCopy = resultText.textContent + '\n\n\n' + getSelectedMentions();
+      const textToCopy = resultText.textContent + '\n\n\n' + mentionsTextarea.value;
       if (navigator.clipboard) {
         navigator.clipboard.writeText(textToCopy).then(() => {
           copySuccess.style.display = 'block';
@@ -189,9 +180,7 @@
 
     pInput.addEventListener('input', updateResult);
     timeInput.addEventListener('input', updateResult);
-    mentionList.addEventListener('change', () => {
-      copySuccess.style.display = 'none';
-    });
+    mentionsTextarea.addEventListener('input', updateResult);
 
     updateResult();
   </script>
